# trampoline-parser

./: Cargo.toml
trampoline-parser/: Cargo.toml
trampoline-parser-tests/: Cargo.toml  build.rs
trampoline-parser-tests/grammars/: arithmetic.rs  backtracking.rs  char_classes.rs  choice.rs  digit.rs  followed_by.rs  generic_call.rs  json.rs  keywords.rs  list.rs  list_trailing.rs  literal.rs  lua.rs  lua_expr.rs  mod.rs  nested.rs  nested_postfix.rs  not_followed.rs  number.rs  one_or_more.rs  optional_test.rs  postfix.rs  pratt_in_list.rs  right_assoc.rs  scheme.rs  sequence.rs  skip_test.rs  sparse_array.rs  zero_or_more.rs
trampoline-parser-tests/src/: lib.rs
trampoline-parser-tests/tests/: backtracking.rs  char_classes.rs  combinators.rs  edge_cases.rs  generic_call.rs  json.rs  keywords.rs  left_recursion.rs  lua.rs  nested_postfix.rs  optional.rs  postfix.rs  pratt.rs  right_assoc.rs  scheme.rs  skip.rs  sparse_array.rs
trampoline-parser/src/: codegen.rs  ir.rs  lib.rs  parser_dsl.rs  prefix_factoring.rs  validation.rs
trampoline-parser/src/grammars/: mod.rs
