[package]
name = "trampoline-parser-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hashbrown = "0.15"

[build-dependencies]
trampoline-parser = { path = "../trampoline-parser" }
quote = "1"

[dev-dependencies]
trampoline-parser = { path = "../trampoline-parser" }
quote = "1"
