[package]
name = "trampoline-parser"
version = "0.1.0"
edition = "2024"
description = "DSL for generating trampoline-based scannerless parsers"
license = "MIT"
keywords = ["parser", "scannerless", "lexer", "trampoline", "generator"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
hashbrown = "0.15"

[dev-dependencies]
